create-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: nginx
#---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: curl
#  labels:
#    app: curl
#spec:
#  restartPolicy: OnFailure
#  containers:
#  - name: curl
#    image: radial/busyboxplus:curl
#    command: ['sh', '-c', 'alias curl="curl -s" && echo "Hello, Kubernetes!" && sleep 3600']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl
spec:
  selector:
    matchLabels:
      app: curl
  replicas: 1
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
      - name: curl
        image: radial/busyboxplus:curl
        command: ['sh', '-c', 'echo "Hello, Kubernetes!" && sleep 3600']
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-curl"
spec:
  description: "Allow Curl"
  endpointSelector:
    matchLabels:
      app: nginx
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: curl
    #authentication:
    #  mode: "required"
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/"
